<?xml version="1.0"?>
<package>
  <name>jsk_spot_startup</name>
  <version>1.0.0</version>
  <description>JSK spot startup package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>jsk_maps</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>poitncloud_to_laserscan</run_depend>
  <run_depend>spot_description</run_depend>
  <run_depend>spot_driver</run_depend>

</package>
